--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.properties.hibernate.format_sql=true
 # generate-ddl = active ou non la generation du schema par l'application Java
 spring.jpa.generate-ddl=true
 # ddl-auto = active ou non la generation du schema par l'application Java avec un niveau plus fin
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
